# comfydbg

./: .gitignore  .repokit.json  CHANGELOG.md  CONTRIBUTING.md  README.md  ROADMAP.md  pyproject.toml
.github/: release-template.md
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md
.github/workflows/: main.yml
comfydbg/: __init__.py  __main__.py  _version.py  cli.py  launcher.py
comfydbg/ai/: __init__.py  analyzer.py
comfydbg/ai/backends/: __init__.py  prompt_only.py
comfydbg/ai/prompts/: diagnose.md
comfydbg/engine/: __init__.py  history.py  investigator.py  runner.py
comfydbg/lib/: __init__.py
comfydbg/output/: __init__.py  channels.py  render.py  spinners.py
docs/: parameters.md
scripts/: build_demo.py  demo_render.py  sync-versions.py
scripts/vhs/: demo.tape  minimal-cmd.tape  minimal.tape
tests/: conftest.py  test_cli.py  test_thac0_lib.py  test_version.py
